# ccbdataset_api_ax4.0

./: .env  .gitignore  README.md  README_EN.md  RUN_WITH_UV_AX4.md  config.py  main.py  main_ax4.py  pyproject.toml  run_ax4.sh  simple_test.py  test_ax4_api.py  test_data_mapping.py  test_single_qa.py  test_timeout_fix.py
data/: items_202509011603.json  sample.json
final_output/: .gitkeep  김기태_결.json  김시재_누에의_꿈-푸른_기억.json  리디아_히르테_No_Title.json  리차드_맥베티스_Happening.json  벨라_용옥_김_Nebula.json  안네케_클라인_Prospects_for_Love.json  여_약카_애슐리_Scent_of_Time.json  오석천_시간의_결,_손길의_숨결_1_2_3.json  제니퍼_로버트슨_Prospecting.json  키미에_이노_Eclipse_Moon_Jar.json
models/: ax4_api_agent.py
processors/: __init__.py  ax4_processor.py
prompts/: curator_artist_questions.md  curator_artwork_questions.md  visitor_questions.md
utils/: common.py  file_processor.py  json_parser.py  logger.py  prompt_loader.py  qna_validator.py
