[project]
name = "ccbdataset-transformer-ax4"
version = "0.2.0"
description = "CCB Dataset Transformer for A.X 4.0 API - API-based Q&A Generation"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "psutil>=7.0.0",
    "huggingface-hub>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "models", "processors", "prompts"]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
